CPP/ifceditor_v1/ifceditor/ifcengine/include/ifcengine.h

typedef	int_t			* SdaiAggr;
typedef	void			* SdaiAttr;
typedef	int_t			SdaiEntity;
typedef	int_t			SdaiInstance;
typedef	int_t			SdaiModel;
typedef	int_t			SdaiPrimitiveType;
typedef	void			* SdaiADB;
typedef	int64_t			ExpressID;
char			DECL * STDC	engiGetInstanceClassInfo(
									SdaiInstance			instance
								);
char			DECL * STDC	engiGetInstanceClassInfoUC(
									SdaiInstance			instance
								);
int_t			DECL STDC	engiGetInstanceMetaInfo(
									SdaiInstance			instance,
									int_t					* localId,
									const char				** entityName,
									const char				** entityNameUC
								);
static	inline	int_t	engiGetInstanceMetaInfo(
								SdaiInstance			instance,
								int_t					* localId,
								char					** entityName,
								char					** entityNameUC
							)
{
	return	engiGetInstanceMetaInfo(
					instance,
					localId,
					(const char**) entityName,
					(const char**) entityNameUC
				);
}
void			DECL STDC	sdaiPrepend(
									const SdaiAggr			aggregate,
									SdaiPrimitiveType		valueType,
									const void				* value
								);
static	inline	void	sdaiPrepend(
								const SdaiAggr			aggregate,
								SdaiPrimitiveType		valueType,
								SdaiInstance			value
							)
{
	return	sdaiPrepend(
					aggregate,
					valueType,
					(const void*) value
				);
}
void			DECL STDC	sdaiAppend(
									const SdaiAggr			aggregate,
									SdaiPrimitiveType		valueType,
									const void				* value
								);
static	inline	void	sdaiAppend(
								const SdaiAggr			aggregate,
								SdaiPrimitiveType		valueType,
								SdaiInstance			value
							)
{
	return	sdaiAppend(
					aggregate,
					valueType,
					(const void*) value
				);
}
SdaiADB			DECL STDC	sdaiCreateADB(
									SdaiPrimitiveType		valueType,
									const void				* value
								);
static	inline	SdaiADB	sdaiCreateADB(
								SdaiPrimitiveType		valueType,
								SdaiInstance			value
							)
{
	return	sdaiCreateADB(
					valueType,
					(const void*) value
				);
}
SdaiAggr		DECL STDC	sdaiCreateAggr(
									SdaiInstance			instance,
									const SdaiAttr			attribute
								);
SdaiAggr		DECL STDC	sdaiCreateAggrBN(
									SdaiInstance			instance,
									const char				* attributeName
								);
static	inline	SdaiAggr	sdaiCreateAggrBN(
									SdaiInstance			instance,
									char					* attributeName
								)
{
	return	sdaiCreateAggrBN(
					instance,
					(const char*) attributeName
				);
}
SdaiAggr		DECL STDC	sdaiCreateNestedAggr(
									const SdaiAggr			aggregate
								);
SdaiInstance	DECL STDC	sdaiCreateInstance(
									SdaiModel				model,
									SdaiEntity				entity
								);
SdaiInstance	DECL STDC	sdaiCreateInstanceBN(
									SdaiModel				model,
									const char				* entityName
								);
static	inline	SdaiInstance	sdaiCreateInstanceBN(
										SdaiModel				model,
										char					* entityName
									)
{
	return	sdaiCreateInstanceBN(
					model,
					(const char*) entityName
				);
}
void			DECL STDC	sdaiDeleteInstance(
									SdaiInstance			instance
								);
void			DECL STDC	sdaiPutADBTypePath(
									const SdaiADB			ADB,
									int_t					pathCount,
									const char				* path
								);
static	inline	void	sdaiPutADBTypePath(
								const SdaiADB			ADB,
								int_t					pathCount,
								char					* path
							)
{
	return	sdaiPutADBTypePath(
					ADB,
					pathCount,
					(const char*) path
				);
}
void			DECL STDC	sdaiPutAttr(
									SdaiInstance			instance,
									const SdaiAttr			attribute,
									SdaiPrimitiveType		valueType,
									const void				* value
								);
static	inline	void	sdaiPutAttr(
								SdaiInstance			instance,
								const SdaiAttr			attribute,
								SdaiPrimitiveType		valueType,
								SdaiInstance			value
							)
{
	return	sdaiPutAttr(
					instance,
					attribute,
					valueType,
					(const void*) value
				);
}
void			DECL STDC	sdaiPutAttrBN(
									SdaiInstance			instance,
									const char				* attributeName,
									SdaiPrimitiveType		valueType,
									const void				* value
								);
static	inline	void	sdaiPutAttrBN(
								SdaiInstance			instance,
								char					* attributeName,
								SdaiPrimitiveType		valueType,
								const void				* value
							)
{
	return	sdaiPutAttrBN(
					instance,
					(const char*) attributeName,
					valueType,
					value
				);
}
static	inline	void	sdaiPutAttrBN(
								SdaiInstance			instance,
								const char				* attributeName,
								SdaiPrimitiveType		valueType,
								SdaiInstance			value
							)
{
	return	sdaiPutAttrBN(
					instance,
					attributeName,
					valueType,
					(const void*) value
				);
}
void			DECL STDC	engiSetComment(
									SdaiInstance			instance,
									const char				* comment
								);
static	inline	void	engiSetComment(
								SdaiInstance			instance,
								char					* comment
							)
{
	return	engiSetComment(
					instance,
					(const char*) comment
				);
}
ExpressID		DECL STDC	engiGetInstanceLocalId(
									SdaiInstance			instance
								);
int_t			DECL STDC	sdaiTestAttr(
									SdaiInstance			instance,
									const SdaiAttr			attribute
								);
int_t			DECL STDC	sdaiTestAttrBN(
									SdaiInstance			instance,
									const char				* attributeName
								);
static	inline	int_t	sdaiTestAttrBN(
								SdaiInstance			instance,
								char					* attributeName
							)
{
	return	sdaiTestAttrBN(
					instance,
					(const char*) attributeName
				);
}
SdaiInstance	DECL STDC	sdaiCreateInstanceEI(
									SdaiModel				model,
									SdaiEntity				entity,
									ExpressID				expressID
								);
SdaiInstance	DECL STDC	sdaiCreateInstanceBNEI(
									SdaiModel				model,
									const char				* entityName,
									ExpressID				expressID
								);
static	inline	SdaiInstance	sdaiCreateInstanceBNEI(
										SdaiModel				model,
										char					* entityName,
										ExpressID				expressID
									)
{
	return	sdaiCreateInstanceBNEI(
					model,
					(const char*) entityName,
					expressID
				);
}
void			DECL STDC	circleSegments(
									int_t					circles,
									int_t					smallCircles
								);
void			DECL STDC	setMaximumSegmentationLength(
									SdaiModel				model,
									double					length
								);
double			DECL STDC	getUnitConversionFactor(
									SdaiModel				model,
									const char				* unitType,
									const char				** unitPrefix,
									const char				** unitName,
									const char				** SIUnitName
								);
static	inline	double	getUnitConversionFactor(
								SdaiModel				model,
								char					* unitType,
								char					** unitPrefix,
								char					** unitName,
								char					** SIUnitName
							)
{
	return	getUnitConversionFactor(
					model,
					(const char*) unitType,
					(const char**) unitPrefix,
					(const char**) unitName,
					(const char**) SIUnitName
				);
}