C#/StreamingSTPInOut-CS/StreamingIFCInOut-CS/STEPEngine.cs


		//
		//		engiValidateAttr                            (http://rdf.bg/ifcdoc/CS64/engiValidateAttr.html)
		//
		//	...
		//
        [DllImport(STEPEngineDLL, EntryPoint = "engiValidateAttr")]
        public static extern Int64 engiValidateAttr(Int64 instance, ref int_t attribute);

		//
		//		engiValidateAttrBN                          (http://rdf.bg/ifcdoc/CS64/engiValidateAttrBN.html)
		//
		//	...
		//
        [DllImport(STEPEngineDLL, EntryPoint = "engiValidateAttrBN")]
        public static extern Int64 engiValidateAttrBN(Int64 instance, string attributeName);

        [DllImport(STEPEngineDLL, EntryPoint = "engiValidateAttrBN")]
        public static extern Int64 engiValidateAttrBN(Int64 instance, byte[] attributeName);

		//
		//		sdaiCreateInstanceEI                        (http://rdf.bg/ifcdoc/CS64/sdaiCreateInstanceEI.html)
		//
		//	...
		//
        [DllImport(STEPEngineDLL, EntryPoint = "sdaiCreateInstanceEI")]
        public static extern Int64 sdaiCreateInstanceEI(Int64 model, Int64 entity, Int64 express_id);

		//
		//		sdaiCreateInstanceBNEI                      (http://rdf.bg/ifcdoc/CS64/sdaiCreateInstanceBNEI.html)
		//
		//	...
		//
        [DllImport(STEPEngineDLL, EntryPoint = "sdaiCreateInstanceBNEI")]
        public static extern Int64 sdaiCreateInstanceBNEI(Int64 model, string entityName, Int64 express_id);

        [DllImport(STEPEngineDLL, EntryPoint = "sdaiCreateInstanceBNEI")]
        public static extern Int64 sdaiCreateInstanceBNEI(Int64 model, byte[] entityName, Int64 express_id);

        //
        //  Instance Writing API Calls
        //

		//
		//		sdaiPrepend                                 (http://rdf.bg/ifcdoc/CS64/sdaiPrepend.html)
		//
		//	...
		//
        [DllImport(STEPEngineDLL, EntryPoint = "sdaiPrepend")]
        public static extern void sdaiPrepend(Int64 list, Int64 valueType, out int_t value);

        [DllImport(STEPEngineDLL, EntryPoint = "sdaiPrepend")]
        public static extern void sdaiPrepend(Int64 list, Int64 valueType, out double value);

        [DllImport(STEPEngineDLL, EntryPoint = "sdaiPrepend")]
        public static extern void sdaiPrepend(Int64 list, Int64 valueType, out IntPtr value);

		//
		//		sdaiAppend                                  (http://rdf.bg/ifcdoc/CS64/sdaiAppend.html)
		//
		//	...
		//
        [DllImport(STEPEngineDLL, EntryPoint = "sdaiAppend")]
        public static extern void sdaiAppend(Int64 list, Int64 valueType, out int_t value);

        [DllImport(STEPEngineDLL, EntryPoint = "sdaiAppend")]
        public static extern void sdaiAppend(Int64 list, Int64 valueType, out double value);

        [DllImport(STEPEngineDLL, EntryPoint = "sdaiAppend")]
        public static extern void sdaiAppend(Int64 list, Int64 valueType, out IntPtr value);

		//
		//		engiAppend                                  (http://rdf.bg/ifcdoc/CS64/engiAppend.html)
		//
		//	...
		//
        [DllImport(STEPEngineDLL, EntryPoint = "engiAppend")]
        public static extern void engiAppend(Int64 list, Int64 valueType, out IntPtr values, Int64 card);

		//
		//		sdaiCreateADB                               (http://rdf.bg/ifcdoc/CS64/sdaiCreateADB.html)
		//
		//	...
		//
        [DllImport(STEPEngineDLL, EntryPoint = "sdaiCreateADB")]
        public static extern Int64 sdaiCreateADB(Int64 valueType, out int_t value);

        [DllImport(STEPEngineDLL, EntryPoint = "sdaiCreateADB")]
        public static extern Int64 sdaiCreateADB(Int64 valueType, out double value);

        [DllImport(STEPEngineDLL, EntryPoint = "sdaiCreateADB")]
        public static extern Int64 sdaiCreateADB(Int64 valueType, out IntPtr value);

		//
		//		sdaiCreateAggr                              (http://rdf.bg/ifcdoc/CS64/sdaiCreateAggr.html)
		//
		//	...
		//
        [DllImport(STEPEngineDLL, EntryPoint = "sdaiCreateAggr")]
        public static extern Int64 sdaiCreateAggr(Int64 instance, ref int_t attribute);

		//
		//		sdaiCreateAggrBN                            (http://rdf.bg/ifcdoc/CS64/sdaiCreateAggrBN.html)
		//
		//	...
		//
        [DllImport(STEPEngineDLL, EntryPoint = "sdaiCreateAggrBN")]
        public static extern Int64 sdaiCreateAggrBN(Int64 instance, string attributeName);

        [DllImport(STEPEngineDLL, EntryPoint = "sdaiCreateAggrBN")]
        public static extern Int64 sdaiCreateAggrBN(Int64 instance, byte[] attributeName);

		//
		//		sdaiCreateNestedAggr                        (http://rdf.bg/ifcdoc/CS64/sdaiCreateNestedAggr.html)
		//
		//	...
		//
        [DllImport(STEPEngineDLL, EntryPoint = "sdaiCreateNestedAggr")]
        public static extern Int64 sdaiCreateNestedAggr(out int_t aggr);

		//
		//		sdaiCreateInstance                          (http://rdf.bg/ifcdoc/CS64/sdaiCreateInstance.html)
		//
		//	...
		//
        [DllImport(STEPEngineDLL, EntryPoint = "sdaiCreateInstance")]
        public static extern Int64 sdaiCreateInstance(Int64 model, Int64 entity);

		//
		//		sdaiCreateInstanceBN                        (http://rdf.bg/ifcdoc/CS64/sdaiCreateInstanceBN.html)
		//
		//	...
		//
        [DllImport(STEPEngineDLL, EntryPoint = "sdaiCreateInstanceBN")]
        public static extern Int64 sdaiCreateInstanceBN(Int64 model, string entityName);

        [DllImport(STEPEngineDLL, EntryPoint = "sdaiCreateInstanceBN")]
        public static extern Int64 sdaiCreateInstanceBN(Int64 model, byte[] entityName);

		//
		//		sdaiDeleteInstance                          (http://rdf.bg/ifcdoc/CS64/sdaiDeleteInstance.html)
		//
		//	...
		//
        [DllImport(STEPEngineDLL, EntryPoint = "sdaiDeleteInstance")]
        public static extern void sdaiDeleteInstance(Int64 instance);

		//
		//		sdaiPutADBTypePath                          (http://rdf.bg/ifcdoc/CS64/sdaiPutADBTypePath.html)
		//
		//	...
		//
        [DllImport(STEPEngineDLL, EntryPoint = "sdaiPutADBTypePath")]
        public static extern void sdaiPutADBTypePath(string ADB, Int64 pathCount, string path);

        [DllImport(STEPEngineDLL, EntryPoint = "sdaiPutADBTypePath")]
        public static extern void sdaiPutADBTypePath(byte[] ADB, Int64 pathCount, byte[] path);

		//
		//		sdaiPutAttr                                 (http://rdf.bg/ifcdoc/CS64/sdaiPutAttr.html)
		//
		//	...
		//
        [DllImport(STEPEngineDLL, EntryPoint = "sdaiPutAttr")]
        public static extern void sdaiPutAttr(Int64 instance, ref int_t attribute, Int64 valueType, out int_t value);

        [DllImport(STEPEngineDLL, EntryPoint = "sdaiPutAttr")]
        public static extern void sdaiPutAttr(Int64 instance, ref int_t attribute, Int64 valueType, out double value);

        [DllImport(STEPEngineDLL, EntryPoint = "sdaiPutAttr")]
        public static extern void sdaiPutAttr(Int64 instance, ref int_t attribute, Int64 valueType, out IntPtr value);

		//
		//		sdaiPutAttrBN                               (http://rdf.bg/ifcdoc/CS64/sdaiPutAttrBN.html)
		//
		//	...
		//
        [DllImport(STEPEngineDLL, EntryPoint = "sdaiPutAttrBN")]
        public static extern void sdaiPutAttrBN(Int64 instance, string attributeName, Int64 valueType, out int_t value);

        [DllImport(STEPEngineDLL, EntryPoint = "sdaiPutAttrBN")]
        public static extern void sdaiPutAttrBN(Int64 instance, string attributeName, Int64 valueType, out double value);

        [DllImport(STEPEngineDLL, EntryPoint = "sdaiPutAttrBN")]
        public static extern void sdaiPutAttrBN(Int64 instance, string attributeName, Int64 valueType, out IntPtr value);

        [DllImport(STEPEngineDLL, EntryPoint = "sdaiPutAttrBN")]
        public static extern void sdaiPutAttrBN(Int64 instance, byte[] attributeName, Int64 valueType, out int_t value);

        [DllImport(STEPEngineDLL, EntryPoint = "sdaiPutAttrBN")]
        public static extern void sdaiPutAttrBN(Int64 instance, byte[] attributeName, Int64 valueType, out double value);

        [DllImport(STEPEngineDLL, EntryPoint = "sdaiPutAttrBN")]
        public static extern void sdaiPutAttrBN(Int64 instance, byte[] attributeName, Int64 valueType, out IntPtr value);

		//
		//		engiSetComment                              (http://rdf.bg/ifcdoc/CS64/engiSetComment.html)
		//
		//	This call can be used to add a comment to an instance when exporting the content. The comment is available in the exported/saved IFC file.
		//
        [DllImport(STEPEngineDLL, EntryPoint = "engiSetComment")]
        public static extern void engiSetComment(Int64 instance, string comment);

        [DllImport(STEPEngineDLL, EntryPoint = "engiSetComment")]
        public static extern void engiSetComment(Int64 instance, byte[] comment);

		//
		//		engiGetInstanceLocalId                      (http://rdf.bg/ifcdoc/CS64/engiGetInstanceLocalId.html)
		//
		//	...
		//
        [DllImport(STEPEngineDLL, EntryPoint = "engiGetInstanceLocalId")]
        public static extern Int64 engiGetInstanceLocalId(Int64 instance);

		//
		//		sdaiTestAttr                                (http://rdf.bg/ifcdoc/CS64/sdaiTestAttr.html)
		//
		//	...
		//
        [DllImport(STEPEngineDLL, EntryPoint = "sdaiTestAttr")]
        public static extern Int64 sdaiTestAttr(Int64 instance, ref int_t attribute);

		//
		//		sdaiTestAttrBN                              (http://rdf.bg/ifcdoc/CS64/sdaiTestAttrBN.html)
		//
		//	...
		//
        [DllImport(STEPEngineDLL, EntryPoint = "sdaiTestAttrBN")]
        public static extern Int64 sdaiTestAttrBN(Int64 instance, string attributeName);

        [DllImport(STEPEngineDLL, EntryPoint = "sdaiTestAttrBN")]
        public static extern Int64 sdaiTestAttrBN(Int64 instance, byte[] attributeName);

		//
		//		engiGetInstanceClassInfo                    (http://rdf.bg/ifcdoc/CS64/engiGetInstanceClassInfo.html)
		//
		//	...
		//
        [DllImport(STEPEngineDLL, EntryPoint = "engiGetInstanceClassInfo")]
        public static extern IntPtr engiGetInstanceClassInfo(Int64 instance);

		//
		//		engiGetInstanceClassInfoUC                  (http://rdf.bg/ifcdoc/CS64/engiGetInstanceClassInfoUC.html)
		//
		//	...
		//
        [DllImport(STEPEngineDLL, EntryPoint = "engiGetInstanceClassInfoUC")]
        public static extern IntPtr engiGetInstanceClassInfoUC(Int64 instance);

		//
		//		engiGetInstanceClassInfoEx                  (http://rdf.bg/ifcdoc/CS64/engiGetInstanceClassInfoEx.html)
		//
		//	...
		//
        [DllImport(STEPEngineDLL, EntryPoint = "engiGetInstanceClassInfoEx")]
        public static extern void engiGetInstanceClassInfoEx(Int64 instance, out IntPtr classInfo);

		//
		//		engiGetInstanceMetaInfo                     (http://rdf.bg/ifcdoc/CS64/engiGetInstanceMetaInfo.html)
		//
		//	...
		//
        [DllImport(STEPEngineDLL, EntryPoint = "engiGetInstanceMetaInfo")]
        public static extern Int64 engiGetInstanceMetaInfo(out int_t instance, out int_t localId, out IntPtr entityName, out IntPtr entityNameUC);

        //
        //  Controling API Calls
        //

		//
		//		circleSegments                              (http://rdf.bg/ifcdoc/CS64/circleSegments.html)
		//
		//	...
		//
        [DllImport(STEPEngineDLL, EntryPoint = "circleSegments")]
        public static extern void circleSegments(Int64 circles, Int64 smallCircles);

		//
		//		setMaximumSegmentationLength                (http://rdf.bg/ifcdoc/CS64/setMaximumSegmentationLength.html)
		//
		//	...
		//
        [DllImport(STEPEngineDLL, EntryPoint = "setMaximumSegmentationLength")]
        public static extern void setMaximumSegmentationLength(Int64 model, double length);

		//
		//		getUnitConversionFactor                     (http://rdf.bg/ifcdoc/CS64/getUnitConversionFactor.html)
		//
		//	...
		//
        [DllImport(STEPEngineDLL, EntryPoint = "getUnitConversionFactor")]
        public static extern double getUnitConversionFactor(Int64 model, string unitType, out IntPtr unitPrefix, out IntPtr unitName, out IntPtr SIUnitName);
